Closed
Bug 1324311
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::dom::AudioChannelService::AudioChannelWindow::RequestAudioFocus
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: n.nethercote, Assigned: alwu)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
baku
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
This bug was filed from the Socorro interface and is
report bp-3d438986-0d95-45e3-9822-83a062161217.
=============================================================
This Fennec-only crash has been around for some time, and has quite a high crash volume, but appears to have no bug filed. Stats for the past 7 days:
> Product Version Count Percentage Installations
> FennecAndroid 50.0.2 157 38.1% 157
> FennecAndroid 50.1.0 144 35.0% 93
> FennecAndroid 49.0.2 27 6.6% 23
> FennecAndroid 50.0 25 6.1% 16
> FennecAndroid 51.0b7 19 4.6% 8
> FennecAndroid 49.0 14 3.4% 12
> FennecAndroid 51.0b5 8 1.9% 6
> FennecAndroid 53.0a1 8 1.9% 3
> FennecAndroid 50.0.1 3 0.7% 3
> FennecAndroid 50.0b12 3 0.7% 1
> FennecAndroid 49.0b8 2 0.5% 1
> FennecAndroid 49.0b11 1 0.2% 1
> FennecAndroid 52.0a2 1 0.2% 1
The crash address is always 0x56. Perhaps aAgent is null?
| Reporter | ||
Comment 2•9 years ago
|
||
This is the #10 top browser crash in Fennec Nightly for the past 7 days.
status-firefox50:
--- → affected
status-firefox51:
--- → affected
status-firefox52:
--- → affected
status-firefox53:
--- → affected
Updated•9 years ago
|
Priority: -- → P1
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → alwu
Flags: needinfo?(alwu)
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Attachment #8819759 -
Flags: review?(amarchesini)
Updated•9 years ago
|
Component: Audio/Video → DOM
Comment 5•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8819759 [details]
Bug 1324311 - window-less agent can't own audio focus.
https://reviewboard.mozilla.org/r/99398/#review99966
Attachment #8819759 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 6•9 years ago
|
||
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/699a5d5828dc
window-less agent can't own audio focus. r=baku
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 9•9 years ago
|
||
Alastor,
Maybe we should uplift it to 52 and even 51. What do you think?
Flags: needinfo?(alwu)
Comment 10•9 years ago
|
||
I was going to ask the same, thanks :)
| Assignee | ||
Comment 11•9 years ago
|
||
Let's wait for a while to see whether the crash has been fixed and make sure there isn't other side effects.
| Assignee | ||
Comment 12•9 years ago
|
||
Comment on attachment 8819759 [details]
Bug 1324311 - window-less agent can't own audio focus.
Approval Request Comment
[Feature/Bug causing the regression]: Fix the crash
[User impact if declined]: Still got crash
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Not yet
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: No
[Is the change risky?]: No
[Why is the change risky/not risky?]: Just added another if-condition for return
[String changes made/needed]: No
Flags: needinfo?(alwu)
Attachment #8819759 -
Flags: approval-mozilla-beta?
Attachment #8819759 -
Flags: approval-mozilla-aurora?
Comment 13•9 years ago
|
||
Comment on attachment 8819759 [details]
Bug 1324311 - window-less agent can't own audio focus.
Fix a crash. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8819759 -
Flags: approval-mozilla-beta?
Attachment #8819759 -
Flags: approval-mozilla-beta+
Attachment #8819759 -
Flags: approval-mozilla-aurora?
Attachment #8819759 -
Flags: approval-mozilla-aurora+
Comment 14•9 years ago
|
||
| bugherder uplift | ||
Comment 15•9 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•