Bug 1324311 - window-less agent can't own audio focus. r=baku

MozReview-Commit-ID: HBieQMoIGOv

--HG--
extra : rebase_source : f1a7a1da2d02f941fe4df68035a8328903fbdf8c